samples/_failures_safe/1761085052_3add49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96aa3a5e.c: In function ‘main’:
./samples/SAFE/__tmp_96aa3a5e.c:168:12: error: missing terminating " character
  168 |     printf("=========================\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_96aa3a5e.c:168:5: error: expected expression at end of input
  168 |     printf("=========================\n
      |     ^~~~~~
./samples/SAFE/__tmp_96aa3a5e.c:168:5: error: expected declaration or statement at end of input
